doc-surrealdb_versioned_docs/version-2.x/cli/export.mdx
---
sidebar_position: 4
sidebar_label: Export command
title: Export command | CLI tool
description: The export command exports a SurrealQL script file from a local or remote SurrealDB database server.
---

# Export command

The export command exports a SurrealQL script file from a local or remote SurrealDB database server.

:::note
__BEFORE YOU START :__ Make sure you’ve [installed SurrealDB](/docs/surrealdb/2.x/installation) — it should only take a second!
:::

## Command options 

<table>
    <thead>
        <tr>
            <th>Arguments</th>
            <th>Description</th>
        </tr>
    </thead>  
    <tbody>
        <tr>
            <td>
                <code>-e</code> / <code>--endpoint</code> / <code>--conn</code>
                <l className='grey'>OPTIONAL</l>
            </td>
            <td>
            Sets the url of the database server to connect to
            </td>
        </tr>
        <tr>
            <td>
                <code>-u</code> / <code>--user</code>
                <l className='yellow'>REQUIRED</l>
            </td>
            <td>
                Sets master username for the database
            </td>
        </tr>
        <tr>
            <td>
                <code>-p</code> / <code>--pass</code>
                <l className='yellow'>REQUIRED</l>
            </td>
            <td>
                Sets master password for the database
            </td>
        </tr>
        <tr>
            <td>
                <code>-t</code> / <code>--token</code>
                <l className='grey'>OPTIONAL</l>
            </td>
            <td>
                Sets the authentication token to use when connecting to the server. Connect to SurrealDB using a JWT instead of user credentials
            </td>
        </tr>
        <tr>
            <td>
                <code>--ns</code>
                <l className='yellow'>REQUIRED</l>
            </td>
            <td>
                Sets the desired namespace in which to export data
            </td>
        </tr>
        <tr>
            <td>
                <code>--db</code>
                <l className='yellow'>REQUIRED</l>
            </td>
            <td>
                Sets the desired database into which to export data
            </td>
        </tr>
    </tbody>
</table>

## Positional argument

<table>
    <thead>
        <tr>
            <th>Arguments</th>
            <th>Description</th>
        </tr>
    </thead>  
    <tbody>
        <tr>
            <td>
                <code>file</code>
                <l className='yellow'>REQUIRED</l>
            </td>
            <td>
                Sets the the path to the file which should be exported
            </td>
        </tr>
    </tbody>
</table>

## Example usage

To perform a SurrealQL database export into a local file, in a terminal run the `surreal export` command with the required arguments.

```bash
surreal export --conn http://localhost:8000 --user root --pass root --ns test --db test export.surql
```

Using token based authentication

```bash
surreal export --conn http://localhost:8000 --token <token> --ns test --db test export.surql
```


## Command help

To see the help information and usage instructions, in a terminal run the surreal export --help command without any further arguments. This command gives general information on the arguments, inputs, and additional options for the export command.

```bash
surreal export --help
```

The output of the above command :

```
Export a SurrealQL script into an existing database

USAGE:

surreal export [OPTIONS] <file>

ARGS:
<file> Path to the sql file to export


OPTIONS:
-e, --endpoint, --conn <conn>          Remote database server URL to connect to
                                        [default: https://cloud.surrealdb.com]

--db <db>                              The database to export the data into

-h, --help                             Print help information

--ns <ns>                              The namespace to export the data into

-p, --pass <pass>                      Database authentication password to use when connecting
                                        [default: root]

-u, --user <user>                       Database authentication username to use when connecting [default: root]

-t, --token <TOKEN>            Authentication token in JWT format to use when connecting [env: SURREAL_TOKEN=]
```